--- a/public/assets/app/css/style.css
+++ b/public/assets/app/css/style.css
@@ -72,7 +72,7 @@
 .page-index .content .header{
 
 }
-body{
+html, body{
     font-size: 16px;
 }
 .welcome{
@@ -104,4 +104,7 @@ body{
 .ui.segment.post-content{
     padding-left: 0;
     padding-right: 0;
+}
+.post-content img{
+    max-width: 100%;
 }
