--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -64,7 +64,8 @@ html
         //script(src='/assets/plugins/bootstrap/js/bootstrap.min.js')
         //script(src='/assets/plugins/bootstrap3-dialog/js/bootstrap-dialog.min.js')
         script(src='/assets/app/js/vendor/mustache.js')
-        script(src='/assets/app/js/vendor/moment-with-langs.js')
+        //script(src='/assets/app/js/vendor/moment-with-langs.js')
+        script(src='//cdn.jsdelivr.net/momentjs/2.18.1/moment-with-locales.min.js')
         block foot-js
         script.
             $('.masthead')
