--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -58,12 +58,13 @@ html
                         h3.ui.inverted.large.header wenglou
                         p 基于nodejs的cms系统，nodejs + mongodb
                         a.item(target='_blank', href='https://github.com/xiaoshan5733/cms') github
-        script(src='/assets/app/js/vendor/jquery-3.2.0.min.js')
+        script(src='//cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js')
         //script(src='/assets/plugins/semantic/dist/semantic.min.js')
         script(src='//cdn.jsdelivr.net/semantic-ui/2.2.9/semantic.min.js')
         //script(src='/assets/plugins/bootstrap/js/bootstrap.min.js')
         //script(src='/assets/plugins/bootstrap3-dialog/js/bootstrap-dialog.min.js')
-        script(src='/assets/app/js/vendor/mustache.js')
+        //script(src='/assets/app/js/vendor/mustache.js')
+        script(src='//cdn.jsdelivr.net/mustache.js/2.3.0/mustache.min.js')
         //script(src='/assets/app/js/vendor/moment-with-langs.js')
         script(src='//cdn.jsdelivr.net/momentjs/2.18.1/moment-with-locales.min.js')
         block foot-js
