--- a/views/server/content/item.jade
+++ b/views/server/content/item.jade
@@ -1,7 +1,7 @@
 extends ../layout
 block head-css
-    <link rel="stylesheet" href="/assets/plugins/blueimp-gallery/css/blueimp-gallery.css">
-    <link rel="stylesheet" href="/assets/plugins/blueimp-gallery/css/blueimp-gallery-indicator.css">
+    link(rel='stylesheet', href='//cdn.jsdelivr.net/blueimp-gallery/2.15.0/css/blueimp-gallery.min.css')
+    link(rel='stylesheet', href='//cdn.jsdelivr.net/blueimp-gallery/2.15.0/js/blueimp-gallery-indicator.js')
 block content
     .row
         .col-md-12
