--- a/views/app/content/item.jade
+++ b/views/app/content/item.jade
@@ -1,8 +1,8 @@
 extends ../layout
 block head-css
-    <link rel="stylesheet" href="/assets/plugins/highlight/styles/tomorrow-night.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/blueimp-gallery/2.15.0/css/blueimp-gallery.min.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/blueimp-gallery/2.15.0/js/blueimp-gallery-indicator.js">
+    link(rel='stylesheet', href='//cdn.jsdelivr.net/highlight.js/9.10.0/styles/tomorrow-night.min.css')
+    link(rel='stylesheet', href='//cdn.jsdelivr.net/blueimp-gallery/2.15.0/css/blueimp-gallery.min.css')
+    link(rel='stylesheet', href='//cdn.jsdelivr.net/blueimp-gallery/2.15.0/js/blueimp-gallery-indicator.js')
 block content
     .ui.container
         .ui.body.post
@@ -106,7 +106,7 @@ block content
         a.play-pause
         ol.indicator
 block foot-js
-    script(src='/assets/plugins/highlight/highlight.pack.js')
+    script(src='//cdn.jsdelivr.net/highlight.js/9.10.0/highlight.min.js')
 
     script(src='//cdn.jsdelivr.net/blueimp-gallery/2.15.0/js/blueimp-gallery.min.js')
     script(src='//cdn.jsdelivr.net/jquery.lazyload/1.9.3/jquery.lazyload.min.js')
