--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -11,7 +11,7 @@ html.no-js
         // Bootstrap core CSS
         link(rel='stylesheet', href='//cdn.jsdelivr.net/bootstrap/3.3.7/css/bootstrap.min.css')
         // Bootstrap dialog
-        link(rel='stylesheet', href='/assets/plugins/bootstrap3-dialog/css/bootstrap-dialog.min.css')
+        link(rel='stylesheet', href='//cdn.jsdelivr.net/bootstrap3-dialog/1.35.4/bootstrap-dialog.min.css')
 
         link(rel='stylesheet', href='/assets/plugins/messenger/css/messenger.css')
         link(rel='stylesheet', href='/assets/plugins/messenger/css/messenger-theme-flat.css')
@@ -177,7 +177,7 @@ html.no-js
         script(src='//cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js')
         script(src='//cdn.jsdelivr.net/jquery.form/4.2.0/jquery.form.min.js')
         script(src='//cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js')
-        script(src='/assets/plugins/bootstrap3-dialog/js/bootstrap-dialog.min.js')
+        script(src='//cdn.jsdelivr.net/bootstrap3-dialog/1.35.4/bootstrap-dialog.min.js')
         script(src='/assets/plugins/messenger/js/messenger.min.js')
         script(src='/assets/plugins/messenger/js/messenger-theme-future.js')
         script(src='//cdn.jsdelivr.net/mustache.js/2.3.0/mustache.min.js')
