--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -13,6 +13,8 @@ html.no-js
         // Bootstrap dialog
         link(rel='stylesheet', href='//cdn.jsdelivr.net/bootstrap3-dialog/1.35.4/bootstrap-dialog.min.css')
 
+        link(rel='stylesheet', href='//cdn.jsdelivr.net/sweetalert2/6.4.4/sweetalert2.min.css')
+
         link(rel='stylesheet', href='/assets/plugins/messenger/css/messenger.css')
         link(rel='stylesheet', href='/assets/plugins/messenger/css/messenger-theme-flat.css')
 
@@ -179,6 +181,7 @@ html.no-js
         script(src='//cdn.jsdelivr.net/jquery.form/4.2.0/jquery.form.min.js')
         script(src='//cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js')
         script(src='//cdn.jsdelivr.net/bootstrap3-dialog/1.35.4/bootstrap-dialog.min.js')
+        script(src='//cdn.jsdelivr.net/sweetalert2/6.4.4/sweetalert2.min.js')
         script(src='/assets/plugins/messenger/js/messenger.min.js')
         script(src='/assets/plugins/messenger/js/messenger-theme-future.js')
         script(src='//cdn.jsdelivr.net/mustache.js/2.3.0/mustache.min.js')
