--- a/views/app/page/item.jade
+++ b/views/app/page/item.jade
@@ -1,9 +1,9 @@
 extends ../layout
 block head-css
 block content
-    .container
-        .row
-            .col-md-12
+    .ui.body
+        .ui.container
+            .ui.basic.segment.post-content
                 div !{page.content}
     
 block foot-js
