--- a/views/app/comment.jade
+++ b/views/app/comment.jade
@@ -1,23 +1,25 @@
 extends layout
 
 block content
-    .container
-        each comment in comments
-            h2 #{comment.content}
-            p
-                if (comment.author)
-                    strong
-                        | #{comment.author.name} 
-                | 发布于 
-                | #{moment(comment.created).format('LLL')}
-                p 来自
-                    if (comment.from)
-                        a(href='/content/#{comment.from._id}') #{comment.from.title}
+    .ui.body
+        .ui.container
+            .ui.items
+                each comment in comments
+                    h2 #{comment.content}
+                    p
+                        if (comment.author)
+                            strong
+                                | #{comment.author.name} 
+                        | 发布于 
+                        | #{moment(comment.created).format('LLL')}
+                        p 来自
+                            if (comment.from)
+                                a(href='/content/#{comment.from._id}') #{comment.from.title}
             
-        .text-center
-            if (pageInfo && pageInfo.totalPage > 1)
-                include ./mixin
-                +pagination(pageInfo)
+            .ui.center.aligned
+                if (pageInfo && pageInfo.totalPage > 1)
+                    include ./mixin
+                    +pagination(pageInfo)
 block foot-js
     script.
         var token = '#{token}';
