--- a/views/app/content/list.jade
+++ b/views/app/content/list.jade
@@ -1,10 +1,10 @@
 extends ../layout
 
 block content
-    .container
-        .row
-            .col-md-12
-                table.table.table-striped
+    .ui.body
+        .ui.container
+            .ui.items
+                table.ui.very.basic.padded.table
                     thead
                         tr
                             th 标题
@@ -20,7 +20,7 @@ block content
                                         strong #{content.author.name}
                                 td
                                     | #{moment(content.created).format('LLL')}
-                .text-center
-                    if (pageInfo && pageInfo.totalPage > 1)
-                        include ../mixin
-                        +pagination(pageInfo)
+            .ui.center.aligned
+                if (pageInfo && pageInfo.totalPage > 1)
+                    include ../mixin
+                    +pagination(pageInfo)
