--- a/views/server/category/list.jade
+++ b/views/server/category/list.jade
@@ -29,6 +29,7 @@ block content
                                 | &nbsp;
                                 a.btn.btn-danger.btn-xs.J_del(href='#{adminDir}/category/#{category.id}/del') 删除
             if (pageInfo && pageInfo.totalPage > 1)
+                - pageInfo.query = query
                 include ../mixin
                 +pagination(pageInfo)
 block foot-js
