--- a/views/server/page/list.jade
+++ b/views/server/page/list.jade
@@ -23,6 +23,7 @@ block content
                             td
                                 a.btn.btn-danger.btn-xs.J_del(href='#{adminDir}/page/#{page.id}/del') 删除
             if (pageInfo && pageInfo.totalPage > 1)
+                - pageInfo.query = query
                 include ../mixin
                 +pagination(pageInfo)
     script#J_tmpl_add(type='x-tmpl-mustache')
