--- a/views/server/role/list.jade
+++ b/views/server/role/list.jade
@@ -30,6 +30,7 @@ block content
                                 if (role.status !== 201 && role.status !== 202)
                                     a.btn.btn-danger.btn-xs.J_del(href='#{adminDir}/role/#{role.id}/del') 删除
             if (pageInfo && pageInfo.totalPage > 1)
+                - pageInfo.query = query
                 include ../mixin
                 +pagination(pageInfo)
 
