--- a/views/server/user/list.jade
+++ b/views/server/user/list.jade
@@ -38,6 +38,7 @@ block content
                                     if (user.status !== 101)
                                         a.btn.btn-danger.btn-xs.J_del(href='#{adminDir}/user/#{user.id}/del') 删除
                 if (pageInfo && pageInfo.totalPage > 1)
+                    - pageInfo.query = query
                     include ../mixin
                     +pagination(pageInfo)
 
