--- a/views/server/content/add.jade
+++ b/views/server/content/add.jade
@@ -18,15 +18,16 @@ block content
                                 option(value='#{category.id}')
                                     | #{category.name}
 
-                .form-group
-                    label 图集
-                    .gallery#J_gallery
-                    span.btn.btn-success.fileinput-button
-                        i.glyphicon.glyphicon-plus
-                        span 添加文件
-                        input#fileupload(type='file', name='files[]', multiple='multiple')
-                    div#progress.progress.progress-striped
-                        div.progress-bar.progress-bar-default
+                if (User && (Roles.indexOf('admin') > -1 || Actions.indexOf('FILE_CREATE') > -1))
+                    .form-group
+                        label 图集
+                        .gallery#J_gallery
+                        span.btn.btn-success.fileinput-button
+                            i.glyphicon.glyphicon-plus
+                            span 添加文件
+                            input#fileupload(type='file', name='files[]', multiple='multiple')
+                        div#progress.progress.progress-striped
+                            div.progress-bar.progress-bar-default
                 .form-group
                     label 内容
                     textarea.form-control#J_editor(name='content', rows='20', style='background-color: #fff; border: none;')
