--- a/views/server/category/add.jade
+++ b/views/server/category/add.jade
@@ -10,11 +10,13 @@ block content
                 .form-group
                     label 标记(别名，英文字符，可选)
                     input.form-control(name='flag')
-                //.form-group
+
+                .form-group
                     label 父分类
-                    select.form-control(name='parent')
-                        option(value='') 请选择
-                        option(value='111') 日记
+                    select.form-control.input-sm(name='parent')
+                        option(value='') 无
+                        - each item in items
+                            option(value='#{item.id}') #{item.name}
                 .form-group
                     label 描述
                     textarea.form-control(name='description', rows='8')
