--- a/views/server/category/edit.jade
+++ b/views/server/category/edit.jade
@@ -11,6 +11,15 @@ block content
                     label 标记(别名)
                     input.form-control(name='flag', value='#{category.flag}')
                 .form-group
+                    label 父分类
+                    select.form-control.input-sm(name='parent')
+                        option(value='') 无
+                        - each item in items
+                            if (item.id + '') === (category.parent + '')
+                                option(value='#{item.id}', selected) #{item.name}
+                            else
+                                option(value='#{item.id}') #{item.name}
+                .form-group
                     label 描述
                     textarea.form-control(name='description', rows='8') #{category.description}
                 input(type='hidden', name='_csrf', value='#{token}')
