--- a/views/server/notification/item.jade
+++ b/views/server/notification/item.jade
@@ -7,4 +7,6 @@ block content
                 p 内容：#{notification.content}
                 p 来自：#{notification.from}
                 p 发给：#{notification.to}
+                p 已读：#{notification.read}
+                p 未读：#{notification.unread}
                 p 日期：#{notification.created}
