category parent name

--- a/views/server/category/item.jade
+++ b/views/server/category/item.jade
@@ -6,5 +6,6 @@ block content
             .lists
                 p 名称：#{category.name}
                 p 标记(别名)：#{category.flag}
+                p 父分类：#{category.parent.name}
                 p 日期：#{category.created}
                 p 描述：!{category.description}
