--- a/views/app/index.jade
+++ b/views/app/index.jade
@@ -7,7 +7,7 @@ block welcome
                 h1.ui.inverted.header wenglou
                 h2 
                 a.ui.huge.primary.button(href='https://github.com/xiaoshan5733/cms', target='_blank')
-                    | got it
+                    | github
                     i.right.arrow.icon
 block content
     .ui.body
