--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -73,7 +73,10 @@ html
                     }
                 })
         if (env !== 'development')
-            span(style='display: none;')
-                script.
-                    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-                    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3a258fabccde554fc44cba951692bdde' type='text/javascript'%3E%3C/script%3E"));
+            script.
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+                ga('create', 'UA-93253406-1', 'auto');
+                ga('send', 'pageview');
